# anomaly-detection-data-viz

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg  sonar-project.properties  tox.ini
.codestyle/: .typos.toml
.github/workflows/: build.yml  python.yaml
src/anomaly_data_viz/: .main.py.swp  app.py  config.py  main.py  plot.py  utils.py
tests/: test_anomaly_data_viz.py  test_anomaly_data_viz_app.py  test_anomaly_data_viz_config.py  test_anomaly_data_viz_utils.py
tests/dash_test/: __init__.py  app.py  test_anomaly_data_viz_main.py
