[tool.poetry]
name = "anomaly-data-viz"
version = "0.1.0"
description = ""
authors = ["José Manuel S <s5po@gmx.com>"]
packages = [
    { include = "anomaly_data_viz", from = "src" },
]

[tool.poetry.scripts]
anomaly_data_viz = "anomaly_data_viz.main:main"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.4.1"
dash-bootstrap-components = "^1.1.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
