[tool.poetry]
name = "anomaly-data-viz"
version = "0.1.0"
description = ""
authors = ["José Manuel S <s5po@gmx.com>"]
packages = [
    { include = "anomaly_data_viz", from = "src" },
]

[tool.poetry.scripts]
anomaly_data_viz = "anomaly_data_viz.main:main"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.4.1"
dash-bootstrap-components = "^1.1.0"
pandas = "^1.4.2"
coverage = "^6.4.1"
tox = "^3.25.0"
black = "^22.3.0"
pylint = "^2.14.0"
pre-commit = "^2.19.0"
mypy = "^0.960"
isort = "^5.10.1"
pydantic = "^1.9.1"
python-dotenv = "^0.20.0"
requests = "^2.28.0"
selenium = "^4.2.0"
poethepoet = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
pre-commit = "^2.19.0"

[tool.poe.tasks]
dev = "poetry run python src/anomaly_data_viz/main.py"
format = "poetry run black ."

[tool.black]                                                                                                                                                                                                         
line-length = 120                                                                                                                                                                                                    
                                                                                                                                                                                                                     
[tool.poetry.extras]                                                                                                                                                                                                 
lint = [ "pylint",]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
ignore = "NIP341"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3

#- nitpick
